tests/fixtures/errors/not_a_struct.gcl
param x: Length = 1.0 m;
node bad: Length = @x.foo;
